# jaks

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: terms.hpp
src/: main.cpp
test/: test_example.cpp
